<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dice Roller</string>
    <string name="dice_six">D6</string>
    <string name="dice_ten">D10</string>
    <string name="dice_twenty">D20</string>
    <string name="dice_hundred">D100</string>
    <string name="roll_the_dice">Roll the dice!</string>
    <string name="result">Result</string>
    <string name="Rolld6">Roll d6!</string>
    <string name="Rolld20">Roll d20!</string>
    <string name="Rolld10">Roll d10!</string>
    <string name="Rolld100">Roll d100!</string>
    <string name="result_roll">Result</string>
    <string name="empty">" "</string>
    <string name="rolled_dice_six">You have rolled a D6</string>
    <string name="rolled_dice_ten">You have rolled a D10</string>
    <string name="rolled_dice_twenty">You have rolled a D20</string>
    <string name="rolled_dice_hundred">You have rolled a D100</string>
    <string name="title_activity_dice_bag_manager">DiceBag Manager</string>
    <string name="dice_bag_button">Dice Bag</string>
    <string name="dice_bag_intro">Pick the dices of this bag</string>
    <string name="dice_bag_create">Create new Dice Bag</string>
    <string name="dice_bag_roll">Roll Dice Bag</string>
    <string name="action_settings">Settings</string>

</resources>