<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_the_dice"
        android:textSize="@dimen/FatAss" />

    <Button
        android:id="@+id/diceButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:onClick="onClickRoll"
        android:tag="6"
        android:text="@string/Rolld6" />

    <Button
        android:id="@+id/diceButton100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/diceButton6"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/Rolld100"
        android:onClick="onClickRoll"
        android:tag="100"
        />

    <Button
        android:id="@+id/diceButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/diceButton6"
        android:layout_below="@+id/diceButton6"
        android:text="@string/Rolld10"
        android:onClick="onClickRoll"
        android:tag="10"
        />

    <Button
        android:id="@+id/diceButton20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/diceButton10"
        android:layout_alignBottom="@+id/diceButton10"
        android:layout_alignLeft="@+id/diceButton100"
        android:onClick="onClickRoll"
        android:text="@string/Rolld20"
        android:tag="20"/>

    <TextView
        android:id="@+id/numberResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/diceButton100"
        android:layout_below="@+id/textResultTextView"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/DiceBagSetter"
        android:layout_below="@+id/DiceBagSetter"
        android:layout_marginTop="21dp"
        android:text="@string/result_roll"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/DiceBagSetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/diceButton20"
        android:layout_below="@+id/diceButton10"
        android:onClick="goToDiceBag"
        android:text="@string/dice_bag_button" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/DiceBagSetter"
        android:layout_alignBottom="@+id/DiceBagSetter"
        android:layout_toRightOf="@+id/diceButton100"
        android:text="@string/dice_bag_roll" 
        android:onClick="rollDiceBag"/>

</RelativeLayout>