<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DiceBagManager" >

    <TextView
        android:id="@+id/diceBagIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="19dp"
        android:text="@string/dice_bag_intro" />

    <CheckBox
        android:id="@+id/d6Checker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/diceBagIntro"
        android:layout_below="@+id/diceBagIntro"
        android:layout_marginTop="37dp"
        android:text="@string/dice_six" />

    <CheckBox
        android:id="@+id/d10Checker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/d6Checker"
        android:layout_centerHorizontal="true"
        android:text="@string/dice_ten" />

    <CheckBox
        android:id="@+id/d20Checker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/d6Checker"
        android:layout_below="@+id/d6Checker"
        android:text="@string/dice_twenty" />
    
        <CheckBox
        android:id="@+id/d100Checker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/d10Checker"
        android:layout_below="@+id/d10Checker"
        android:text="@string/dice_hundred" />

        <Button
            android:id="@+id/DiceBagSetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/d20Checker"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/dice_bag_create" 
            android:onClick="createDiceBag"/>

</RelativeLayout>